--- a/public/templates/dialogs/checkEdit.html
+++ b/public/templates/dialogs/checkEdit.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>假別長條圖表單</title>
+    <title></title>
 
     <!-- Import local CSS file  -->
 	  <link rel="stylesheet" href="/public/css/dialogs/leaveChart.css"/>
@@ -30,30 +30,42 @@
     <!-- Import Date Picker Plugin  -->
 	  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   
     <!-- Import Multiple Select Plugin  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.js"></script>
   
     <!-- Import local JS file  -->
-	  <script src="/public/js/dialogs/leaveChart.js"></script>
+	  <script src="/public/js/dialogs/checkEdit.js"></script>
 </head>
 <body>
-<p>查詢個人請假狀態,日期為非必填</p>
-
 <form>
     <div class="ak-field-group">
+        <label for="check_id">假單編號</label>
+        <input type="text" class="ak-field-text" id="check_id" name="check_id" placeholder="" readonly>
+    </div>
+    <div class="row">
+      <div class="ak-field-group col">
         <label for="start_date">開始日期</label>
-        <input type="text" class="ak-field-text" id="start_date" name="start_date" placeholder="">
-    </div>
-    <div class="ak-field-group">
+        <input type="text" class="ak-field-text" id="start_time" name="start_time" placeholder="">
+      </div>
+      <div class="ak-field-group col">
         <label for="end_date">結束日期</label>
-        <input type="text" class="ak-field-text" id="end_date" name="end_date" placeholder="">
+        <input type="text" class="ak-field-text" id="end_time" name="end_time" placeholder="">
+      </div>  
     </div>
-     <div class="form-group" id="form-group-types">
-        <label for="types">假別</label>
-       <select class="form-control" id="types" name="types" multiple></select>
+    <div class="form-group" id="form-group-types">
+        <label for="leave_type">假別</label>
+       <select class="form-control" id="leave_type" name="leave_type"></select>
+    </div> 
+    <div class="ak-field-group">
+        <label for="leave_reason">請假原因</label>
+        <input type="text" class="ak-field-text" id="leave_reason" name="leave_reason" placeholder="">
     </div>
+  
 </form>
 
 </body>
